select 2 alignment issue fix

--- a/assets/css/public-main.css
+++ b/assets/css/public-main.css
@@ -6382,6 +6382,14 @@ button[type=submit] {
 }
 .select2.select2-container.select2-container--default .select2-selection {
   min-height: 40px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   border: none;
   padding: 5px 0;
   border-radius: 0;
